@@ -91,82 +91,57 @@
 	<object class="GtkVBox" id="container">
 		<property name="visible">True</property>
 		<property name="homogeneous">False</property>
-		<property name="spacing">5</property>
+		<property name="spacing">6</property>
 		<child>
-			<object class="GtkVBox" id="vbox1">
+			<object class="GtkEntry" id="search_entry">
+				<property name="visible">True</property>
+				<property name="can_focus">True</property>
+				<property name="editable">True</property>
+				<property name="visibility">True</property>
+				<property name="max_length">0</property>
+				<property name="text" translatable="yes"/>
+				<property name="has_frame">True</property>
+				<property name="invisible_char">&#x25CF;</property>
+				<property name="activates_default">False</property>
+			</object>
+			<packing>
+				<property name="padding">0</property>
+				<property name="expand">False</property>
+				<property name="fill">True</property>
+			</packing>
+		</child>
+		<child>
+			<object class="GtkHBox" id="search_hbox">
 				<property name="visible">True</property>
 				<property name="homogeneous">False</property>
-				<property name="spacing">0</property>
+				<property name="spacing">4</property>
 				<child>
-					<object class="GtkHBox" id="search_hbox">
+					<object class="GtkComboBox" id="search_combo">
+						<property name="model">search_combo_model</property>
 						<property name="visible">True</property>
-						<property name="homogeneous">False</property>
-						<property name="spacing">0</property>
+						<property name="add_tearoffs">False</property>
+						<property name="focus_on_click">True</property>
 						<child>
-							<object class="GtkEntry" id="search_entry">
-								<property name="visible">True</property>
-								<property name="can_focus">True</property>
-								<property name="editable">True</property>
-								<property name="visibility">True</property>
-								<property name="max_length">0</property>
-								<property name="text" translatable="yes"/>
-								<property name="has_frame">True</property>
-								<property name="invisible_char">&#x25CF;</property>
-								<property name="activates_default">False</property>
-							</object>
-							<packing>
-								<property name="padding">0</property>
-								<property name="expand">True</property>
-								<property name="fill">True</property>
-							</packing>
-						</child>
-						<child>
-							<object class="GtkComboBox" id="search_combo">
-								<property name="model">search_combo_model</property>
-								<property name="visible">True</property>
-								<property name="add_tearoffs">False</property>
-								<property name="focus_on_click">True</property>
-								<child>
-									<object class="GtkCellRendererText" id="renderer1"/>
-									<attributes>
-										<attribute name="text">0</attribute>
-									</attributes>
-								</child>
-							</object>
-							<packing>
-								<property name="padding">0</property>
-								<property name="expand">False</property>
-								<property name="fill">True</property>
-							</packing>
-						</child>
-						<child>
-							<object class="GtkButton" id="search_button">
-								<property name="visible">True</property>
-								<property name="can_focus">True</property>
-								<property name="relief">GTK_RELIEF_NORMAL</property>
-								<property name="focus_on_click">True</property>
-								<child>
-									<object class="GtkImage" id="track_icon">
-										<property name="visible">True</property>
-										<property name="stock">gtk-find</property>
-										<property name="icon_size">4</property>
-										<property name="xalign">0.5</property>
-										<property name="yalign">0.5</property>
-										<property name="xpad">0</property>
-										<property name="ypad">0</property>
-									</object>
-								</child>
-							</object>
-							<packing>
-								<property name="padding">0</property>
-								<property name="expand">False</property>
-								<property name="fill">True</property>
-							</packing>
+							<object class="GtkCellRendererText" id="renderer1"/>
+							<attributes>
+								<attribute name="text">0</attribute>
+							</attributes>
 						</child>
 					</object>
 					<packing>
 						<property name="padding">0</property>
-						<property name="expand">False</property>
+						<property name="expand">True</property>
+						<property name="fill">True</property>
+					</packing>
+				</child>
+				<child>
+					<object class="GtkButton" id="search_button">
+						<property name="use-stock">True</property>
+						<property name="label">gtk-find</property>
+					</object>
+					<packing>
+						<property name="padding">0</property>
+						<property name="expand">True</property>
 						<property name="fill">True</property>
 					</packing>
 				</child>
@@ -190,7 +165,7 @@
 					<object class="GtkVBox" id="vbox1">
 						<property name="visible">True</property>
 						<property name="homogeneous">False</property>
-						<property name="spacing">0</property>
+						<property name="spacing">4</property>
 						<child>
 							<object class="GtkScrolledWindow" id="results_scrolledwindow">
 								<property name="visible">True</property>
@@ -280,7 +255,7 @@
 					<object class="GtkVBox" id="vbox2">
 						<property name="visible">True</property>
 						<property name="homogeneous">False</property>
-						<property name="spacing">0</property>
+						<property name="spacing">4</property>
 						<child>
 							<object class="GtkScrolledWindow" id="popular_scrolledwindow">
 								<property name="visible">True</property>
@@ -370,7 +345,7 @@
 					<object class="GtkVBox" id="vbox3">
 						<property name="visible">True</property>
 						<property name="homogeneous">False</property>
-						<property name="spacing">0</property>
+						<property name="spacing">4</property>
 						<child>
 							<object class="GtkScrolledWindow" id="latest_scrolledwindow">
 								<property name="visible">True</property>
