@@ -20,7 +20,7 @@
 </object>
 
 <object class="GtkVBox" id="yt_vbox">
-	<property name="border-width">5</property>
+	<property name="border-width">0</property>
 	<property name="homogeneous">False</property>
 	<property name="spacing">6</property>
 	<child>
