@@ -1,3 +1,9 @@
+2009-07-20  Philip Withnall  <philip@tecnocode.co.uk>
+
+	* src/plugins/jamendo/jamendo.ui:
+	* src/plugins/youtube/youtube.ui: Homogenise the appearance of the
+	YouTube and Jamendo plugins. (Helps: #572292)
+
 2009-07-20  Bastien Nocera  <hadess@hadess.net>
 
 	* src/plugins/lirc/totem_lirc_default: Add
